--- a/chapter_floodinundation.tex
+++ b/chapter_floodinundation.tex
@@ -303,7 +303,7 @@ In the Ryedale case study, using gridded rainfall input actually produced a less
 \subsection{Hydrograph calibration and choice of \(m\) parameter value}
 The poorer performance of the Ryedale hydrograph forecast using the gridded rainfall data is likely due to the use of the uniform rainfall data to calibrate the Ryedale simulations and arrive at the best value of the \(m\) parameter. The same value of \(m = 0.005\) was then used in the Ryedale simulations using gridded rainfall input data, and this produces a less accurate prediction as a result (Figure \ref{fig_ryedale_hydrograph_ensemble}). In future work, it would appear necessary to calibrate the value of \(m\) for different input data sources of rainfall, rather than relying on a single value of \(m\) across all simulations of the same catchment. The simplicity of using a single \(m\) value in this study was deemed necessary to allow for easier isolation of which factors caused the most sensitivity out of rainfall spatial variability or erosion law parameterisation. The resulting limitation of this approach is that it is difficult to robustly assess the forecasting potential of the model without a further set of simulations with re-calibrated \(m\) values.
 
-Subsequent analysis showed that a separate sensitivity analyses using the gridded rainfall input revealed a different `best-fit' value of \(m=0.0075\) when using the gridded rainfall input (Figure \ref{fig_topmodel_m_ryedale_gridded}), leading to better hydrological predictions from the gridded rainfall input simulations. This raises the issue that the model can be configured with different parameters and arrive at the same or similar predictions -- a concept referred to as equifinality and one which is often encountered in the hydrological modelling community \citep{beven1993prophecy,beven2001equifinality,ebel2006physics} -- which somewhat limits the conclusions that can be drawn from the experiments comparing uniform rainfall inputs with gridded rainfall input. In this particular case, both choices of \(m\) value are within reasonable ranges for the types of environment simulated \citep{beven1984testing}, but depending on the choice of \(m\) value, the case for using spatially variable rainfall inputs can be either strengthened or weakened. Does one chose to calibrate the model based on the type of rainfall spatial input as well, and if so, should it be calibrated further based on the type of erosional parameterisation enabled in the model? The size of the parameter space in the HAIL-CAESAR model is large, and a systematic exploration of every single combination of parameters would be time consuming if it were required for every case study to be simulated. Answering these questions of model calibration is beyond the scope of this study, but a recommendation can be made for future studies using the TOPMODEL-based runoff generation in models to assess the sensitivity to the \(m\) parameter as hydrological outputs may be highly sensitive to its value.
+Subsequent analysis showed that a separate sensitivity analyses using the gridded rainfall input revealed a different `best-fit' value of \(m=0.0075\) when using the gridded rainfall input (Figure \ref{fig_topmodel_m_ryedale_gridded}), leading to better hydrological predictions from the gridded rainfall input simulations. This raises the issue that the model can be configured with different parameters and arrive at the same or similar predictions -- a concept referred to as equifinality and one which is often encountered in the hydrological modelling community \citep{beven1993prophecy,beven2001equifinality,ebel2006physics} -- which somewhat limits the conclusions that can be drawn from the experiments comparing uniform rainfall inputs with gridded rainfall input. In this particular case, both choices of \(m\) value are within reasonable ranges for the types of environment simulated \citep{beven1984testing}, but depending on the choice of \(m\) value, the case for using spatially variable rainfall inputs can be either strengthened or weakened. Does one choose to calibrate the model based on the type of rainfall spatial input as well, and if so, should it be calibrated further based on the type of erosional parameterisation enabled in the model? The size of the parameter space in the HAIL-CAESAR model is large, and a systematic exploration of every single combination of parameters would be time consuming if it were required for every case study to be simulated. Answering these questions of model calibration is beyond the scope of this study, but a recommendation can be made for future studies using the TOPMODEL-based runoff generation in models to assess the sensitivity to the \(m\) parameter, as hydrological outputs may be highly sensitive to its value.
 
 % Discussion on erosional parameterisation.
 \subsection{Erosional parameterisation}
