--- a/chapter_rainfallLEMs.tex
+++ b/chapter_rainfallLEMs.tex
@@ -161,7 +161,7 @@ For the aims of this thesis (Chapter \ref{chapter_intro}), a numerical landscape
 
 %processes 
 
-CAESAR-Lisflood, as discussed in previous sections, would appear to meet several of these criteria particularly (1) and (2), though less so for (3) and (4). CAESAR-Lisflood includes a well tested flood-inundation module, based on the established LISFLOOD 2D hydraulic model \citep{Bates1998}. It is therefore capable of representing water flow dynamics within the context of individual storms, when a river catchment is not at hydrological steady state\footnote{Water inputs are not equal to water outputs due to the transient movement of water through the catchment.}. The hydrodynamic nature of CAESAR-Lisflood can be contrasted to many other landscape evolution models which assume a hydrological steady state across a catchment during storm events (e.g. CHILD). CAESAR-Lisflood also features two sediment transport laws, though neither of them are a bedrock incision-based erosion law, such as found in CHILD. CAESAR-Lisflood therefore lacks a range of erosion laws covering the full spectrum or erosional processes, instead focusing on what are termed `transport-limited' erosion laws, i.e. those limited by the rate of sediment transport that can be transported by flowing water. 
+CAESAR-Lisflood, as discussed in previous sections, would appear to meet several of these criteria particularly (1) and (2), though less so for (3) and (4). CAESAR-Lisflood includes a well tested flood-inundation module, based on the established LISFLOOD 2D hydraulic model \citep{Bates1998}. It is therefore capable of representing water flow dynamics within the context of individual storms, when a river catchment is not at hydrological steady state\footnote{Water inputs are not equal to water outputs due to the transient movement of water through the catchment.}. The hydrodynamic nature of CAESAR-Lisflood can be contrasted to many other landscape evolution models which assume a hydrological steady state across a catchment during storm events (e.g. CHILD). CAESAR-Lisflood also features two sediment transport laws, though neither of them are a bedrock incision-based erosion law, such as found in CHILD. CAESAR-Lisflood therefore lacks a range of erosion laws covering the full spectrum of erosional processes, instead focusing on what are termed `transport-limited' erosion laws, i.e. those limited by the rate of sediment transport that can be transported by flowing water. 
 
 % technical
 From a technical implementation perspective, CAESAR-Lisflood is a square-grid based model, which makes for easier interoperability with both terrain input data, and crucially, gridded rainfall datasets, such as from numerical weather prediction model output or rainfall radar data sources. Although there are advantages to using other grid meshes (as discussed in Chapter \ref{chapter_landscape_evol}), such as the triangular irregular grid in CHILD-based models, they come with an increased difficulty in interoperability with common square grid-based data formats, as the gridded data inputs need to be interpolated over the grid points of the irregular terrain mesh. If the input data changes rapidly through time, as rainfall data may do during a storm, then frequent re-interpolation is needed, increasing the computational cost of the simulation.
