--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -66,5 +66,23 @@ Data was provided by the British Atmospheric Data Centre, the Environment Agency
 \\~\\
 \noindent
 This work used the ARCHER UK National Supercomputing Service (\url{http://www.archer.ac.uk}) and the Centre for Environmental Data Analysis JASMIN computing facility (\url{http://www.jasmin.ac.uk/}).
+\\~\\
+\noindent
+Thank you to all those who have been involved with this PhD project: my two supervisors, Simon Brocklehurst and David Schultz, for their support and freedom to let me pursue this research; my examiners, Katharine Welsh and Geraint Vaughan for their time spent reading this thesis and useful feedback received in the viva; my parents, from whom I assume I inherited the obstinance required to undertake a PhD, and to Alex, for putting up with my insufferable predilection for self-doubt and worry over the past four years.
+
+
+\vfil
+\newpage
+%A dedication page can be placed here
+\null
+
+\vfil
+\hfil {\Large\textit{for 3.16}\par} \hfil
+\vfil
 % The next line is NOT optional and MUST appear
 \afterpreface
+
+
+
+
+
